[package]
name = "asteracea-website"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "TODO_DESCRIPTION"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/asteracea-website"
homepage = "https://github.com/Tamschi/asteracea-website/tree/v0.0.1"
documentation = "https://docs.rs/asteracea-website/0.0.1"
keywords = [] #TODO
categories = [] #TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"COPYRIGHT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/asteracea-website" }
is-it-maintained-open-issues = { repository = "Tamschi/asteracea-website" }
maintenance = { status = "experimental" } # This may differ between branches.

[dependencies]
asteracea = { git = "https://github.com/Tamschi/Asteracea.git", branch = "develop" }
lignin-html = { git = "https://github.com/Tamschi/lignin-html.git", branch = "develop" }
num_cpus = "1.13.1"
rhizome = "0.0.1"
tiny_http = "0.10.0"
typed-builder = "0.10.0"

[dev-dependencies]
cargo-husky = "1.5.0"
git_info = "0.1.2"
lignin = { git = "https://github.com/Tamschi/lignin.git", branch = "develop", features = ["callbacks"] }
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"
